Add metadata if order is deletable