@@ -59,6 +59,10 @@ public class OrderHeader {
     @Transient
     private Integer participatingUserCount;
 
+    @Transient
+    @Getter(AccessLevel.NONE)
+    private Boolean deletable;
+
     @OneToMany(cascade = CascadeType.ALL, fetch = FetchType.LAZY, mappedBy = "orderHeader")
     @ToString.Exclude
     private Set<OrderDetail> orderDetailList;
@@ -139,6 +143,17 @@ public class OrderHeader {
         return bills.get();
     }
 
+    public boolean isDeletable() {
+        if (this.deletable == null) {
+            this.deletable = this.getValidity() == OrderHeaderValidity.PENDING
+                    || this.getBillList().stream()
+                    .filter(bill -> !Objects.equals(bill.getUser().getId(), this.getBuyer().getId()))
+                    .allMatch(bill -> bill.getStatus() == BillStatus.UNPAID);
+        }
+        return this.deletable;
+    }
+
+
     public BigDecimal getPerUserFee() {
         var normalizeParticipantCount = this.getParticipatingUserCount() == 0 ? 1 : this.getParticipatingUserCount();
         return this.getOtherFee().divide(BigDecimal.valueOf(normalizeParticipantCount), 0, RoundingMode.HALF_UP);
@@ -148,7 +163,7 @@ public class OrderHeader {
         var userOrderDetails = this.orderDetailList
                 .stream()
                 .filter(order -> Objects.equals(order.getUser().getId(), user.getId()))
-                .collect(Collectors.toList());
+                .toList();
         var totalOrder = userOrderDetails.stream()
                 .map(OrderDetail::getOrderSubtotalPrice)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
